# TeleStalker

./: .dockerignore  .gitignore  Dockerfile  Makefile  README-EN.md  README.md  TODO  docker-compose.yml  install.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: pipe.yml
config/: .env  example.env
src/: commands.py  router.py  visuals.py
src/classes/: channel.py  generic.py  group.py  user.py
src/common/: common_api_commands.py  local_commands.py  qr_auth.py
src/scan_modules/channels/: channel_scan.py
src/scan_modules/groups/: group_scan.py
src/telestalker/: __init__.py  main.py
src/visuals/: visuals.py
